fixed homepage p spacing

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -276,7 +276,6 @@ img.center {
 }
 .fixed{
     width: 30%;
-    padding-bottom: 10%;
     word-wrap: break-word;
     margin: 20px;
     border: solid 1px $grey-light;
